# recipe-rag-nlp

./: .gitignore  LLM_RAG_pipeline_with_qe.py  README.md  basic_cleaning.py  bm25_indexing_search.py  bm25_retrieval_optimized.py  data_exploration.ipynb  download_data.py  environment.yml  existing_embeddings_recipe_rag.py  existing_embeddings_recipe_rag_QE.py  faiss_recipe_index_metadata.json  faiss_recipe_index_minilm_metadata.json  hybrid_retrieval_strategy.py  llm_rag.pipeline.py  llm_rag_pipeline.py  optional_scripts.ipynb  preprocessing.py  pyproject.toml  query_expansion.py  query_parser.py  rag_existing_embeddings.py  rag_ui.py  result_visuals.py  semantic_retrieval.py  semantic_retrieval_BERT.py  structured_filters.py  task9_comparision.py  text_preprocessing.py
