[project]
name = "nlp310"
version = "0.1.0"
description = "NLP project using gensim, transformers, torch, and scikit-learn"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4==4.14.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.2.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "filelock==3.20.0",
    "fonttools==4.59.2",
    "fsspec==2025.9.0",
    "gdown==5.2.0",
    "gensim==4.3.3",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "pyparsing==3.2.4",
    "pysocks==1.7.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rank-bm25==0.2.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "sentence-transformers==5.1.2",
    "smart-open==7.3.1",
    "soupsieve==2.8",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wordcloud==1.9.4",
    "wrapt==1.17.3"
]